# AIOS-The-AI-Operating-System

./: .gitignore  AIOS — Fungsi Lengkap & Menyeluruh.md  CLAUDE.md  Cargo.toml  README.md  demo_tasks.json  pyproject.toml  run_aios_custom.bat
.claude/agents/: README.md
.claude/rules/: README.md
.github/workflows/: README.md  ci.yml  release.yml
agent/core/: README.md  __init__.py  anomaly_detector.py  blackbox.py  context_manager.py  daemon.py  evolution.py  executor.py  idle_brain.py  intelligence.py  ipc.py  memory.py  metacog.py  model_router.py  orchestrator.py  parliament.py  planner.py  prediction.py  reporter.py  system_watcher.py  task_queue.py  tool_factory.py  tool_registry.py
agent/models/: README.md  __init__.py  cloud_llm.py  llm_interface.py  model_manager.py  prompt_templates.py
agent/tests/: README.md  __init__.py  test_autonomous.py  test_blackbox.py  test_cloud_llm.py  test_daemon.py  test_evolution.py  test_idle_brain.py  test_llm_interface.py  test_memory.py  test_metacog.py  test_model_router.py  test_orchestrator.py  test_parliament.py  (+4 more)
config/: README.md  default_rules.json  evolution.yaml  metacog.yaml  parliament.yaml  prediction.yaml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  README.md  SPRINT.md
gui/: README.md  mod.rs
kernel/: README.md  mod.rs
scripts/: README.md  daemon_status.sh  start_daemon.sh  stop_daemon.sh
security/: README.md  __init__.py  constitution.py  monitor.py  permissions.py  sandbox.py  vault.py
shell/: README.md  __init__.py  dashboard.py  display.py  history.py  nl_shell.py  safety.py  voice_interface.py
(+13 files in other folders)
